@@ -46,7 +46,7 @@
 #include <limits.h> /* Integer representation, INT_MIN, INT_MAX... */
 #include <math.h> /* sin cos cos sin 3.14159 */
 #include <stdio.h> /* stderr, FILE, NULL, etc. */
-#include <stdlib.h> /* atof, atoi, malloc, getopt */
+#include <stdlib.h> /* abs, getopt, malloc, strtol */
 #include <string.h> /* strdup */
 
   /* 3rd party vendors */
