@@ -15,7 +15,7 @@
 
 /* Standard header files */
 #include <stdio.h> /* stderr, FILE, NULL, printf */
-#include <stdlib.h> /* atof, atoi, malloc, getopt */
+#include <stdlib.h> /* abs, getopt, malloc, strtol */
 
 /* 3rd party vendors */
 #include <netcdf.h> /* netCDF definitions and C library */
